# Meeting-Room-Reservation-System

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
.kiro/specs/json-repository/: design.md  (+2 more)
.kiro/steering/: product.md  structure.md  tech.md
config/: development.json  production.json  test.json
docs/: PRD.md  domain_class_model.mmd
docs/event_storming/: _meeting_room_event_storming.mmd  add_reservation.mmd  cancel_reservation.mmd  view_reservation.mmd
docs/flows/: adding_reservation.mmd  canceling_reservation.mmd  viewing_reservations.mmd
docs/tasks/: 1_project_setup_and_infrastructure.md  2_domain_layer_implementation.md  3_application_layer_implementation.md  4_Infrastructure_layer_implementation.md  5_application_integration_and_main_entry_point.md  6_testing_implementation.md
src/application/: exceptions.py
src/domain/: exceptions.py
src/infrastructure/: application.py  container.py  error_handler.py  exceptions.py  service_configurator.py
tests/: conftest.py  test_main.py  test_main_signal_handling.py  test_project_structure.py
tests/domain/: test_exceptions.py
tests/infrastructure/: test_application.py  test_application_bootstrap.py  test_application_cli_commands.py  test_application_cli_execution.py  test_application_cli_help.py  test_application_error_handling.py  test_application_lifecycle.py  test_application_logging.py  test_container.py  test_error_handler.py  test_exceptions.py  test_infrastructure_exceptions.py  test_service_configurator.py  test_storage_exceptions.py
(+60 files in other folders)
